# ai-toy-box

./: Makefile  README.md  app.py  main.py  pyproject.toml
flagged/: log.csv
pages/: a.py  chatgpt.py  openai_chat.py
